<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled">Bluetooth was not enabled. You need to enable it to connect with a device.</string>
    <string name="title_connecting">Connecting&#8230;</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device</string>
    <string name="none_device_paired">No devices have been paired</string>
    <string name="none_device_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="bt_socket_option">BT socket</string>
    <string name="ble_option">BLE</string>

    <!-- Options Menu -->
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="discoverable">Make discoverable</string>
    
    <!-- BaseBluetoohConnection -->
    <string name="connected_to">"Connected to "</string>
    
    <!-- Errors -->
    <string name="bluetooth_not_available">Bluetooth is not available. Check if your mobile device supports Bluetooth connections.</string>
    <string name="connecting_bluetooth_error">Unable to connect device</string>
    <string name="connection_lost_error">Device connection was lost</string>
    <string name="location_disabled_error">Enable the location to search for near bluetooth devices</string>
    <string name="location_permission_not_granted_error">Accept the location permission to search for near bluetooth devices</string>

</resources>