<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of the Androidino

  Copyright (C) 2017 Mundo Reader S.L.

  Date: August 2018
  Author: Estefanía Sarasola Elvira <estefania.sarasola@bq.com>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program. If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/dialog_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/accent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_title"
            android:text="@string/select_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:paddingLeft="10dp"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/text_dark_bg"/>

        <ImageButton
            android:id="@+id/scan_devices_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/scan_bt_devices_icon"
            android:tint="@color/text_dark_bg"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp"
            android:paddingBottom="3sp"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <!--Separator view to use if the title of the background is of the same color of the below buttons background-->
    <View
        android:id="@+id/title_separator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/dialog_title_container"
        android:background="@color/accent"
        android:visibility="gone" />

    <!--tabMaxWidth needs a very high value so the indicator is match parent when there is only one
    tab (in devices that doesn't support BLE for example)-->
    <android.support.design.widget.TabLayout
        android:id="@+id/select_bt_type_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_tabs_height"
        app:tabMode="fixed"
        app:tabGravity="fill"
        app:tabMaxWidth="99999dp"
        app:tabIndicatorColor="@color/accent"
        app:tabBackground="@drawable/unselected_bt_type_button_bg"
        app:tabTextAppearance="@style/BoldTab"
        android:layout_below="@id/title_separator" >

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_socket_option"/>

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_option"/>

    </android.support.design.widget.TabLayout>

    <include layout="@layout/device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/select_bt_type_container"/>

</RelativeLayout>